# stencil

./: CMakeLists.txt  README.md
src/: host_main.cu
src/kernels/: kernel_baseline.cu
